# bibtidy

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md  bump.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.github/workflows/: lint.yml
docs/: CNAME  build.py  index.html
plugins/bibtidy/.claude-plugin/: plugin.json
plugins/bibtidy/skills/bibtidy/: SKILL.md
plugins/bibtidy/skills/bibtidy/tools/: crossref.py  duplicates.py  fmt.py
skills/bibtidy/: SKILL.md
skills/bibtidy/tools/: compare.py  crossref.py  duplicates.py  edit.py  fmt.py
tests/: conftest.py  run.sh  run_bibtidy_tests.sh  test_compare.py  test_crossref.py  test_docs_build.py  test_duplicates.py  test_fmt.py  test_validate.py  test_version.py  validate.py
tests/bibtidy/: test_compare.py  test_crossref.py  test_duplicates.py  test_edit.py  test_fmt.py  test_validate.py  validate.py
tests/bibtidy/fixtures/: expected.bib  input.bib
tests/fixtures/: expected.bib  input.bib
