[project]
name = "bibkit"
version = "1.2.1"
description = "A bibliography toolkit for LaTeX — Claude Code plugin"
requires-python = ">=3.10"
license = "MIT"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "skills/bibtidy/tools",
    "tests",
]
